feat: 添加飞书机器人安装后配置和文档系统
实现安装后自动创建配置文件功能，完善配置管理和文档系统

- 添加安装后脚本自动创建配置目录和示例配置文件
- 实现配置文件查找优先级逻辑
- 增强配置类功能，支持脱敏显示和路径管理
- 重构命令行界面，添加配置管理命令
- 更新文档系统，添加详细开发文档和API参考
- 添加调试脚本用于排查配置读取问题

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,14 @@ dev = [
 [project.scripts]
 feishu = "feishu.cli:main"
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.toml"]
 
 [tool.setuptools.package-dir]
 "" = "src"
